@@ -7432,4 +7432,6 @@ EPRINTS-3.1-beta-2
 
 2008-05-07 tdb
  * Export Subjects in the same format as plain text
+ * Added admin tool to check the subject tree for orphaned elements or circular
+    references
 
